Changelog 
=========

1.0 - unreleased
----------------

- Added missing metadata.xml to uninstall profile.
  [hannosch]

- Added uninstall profile and hooked to GS
  [MatthewWilkes]

- Removed DIYPloneStyle tests as they were almost all broken.  Now tests 
  install, CSS and JS entries, and uninstall, but not modifications to default
  views, etc.  This is no loss as these tests didn't work anyway, as they 
  assumed a non-GS installation style.
  [MatthewWilkes]

- Installed nuplone.css with lower precedence than RTL.css after inserting
  RTL.css before ploneCustom.css.  Added test to check for RTL.css
  precendence over nuplone.css.
  Closes http://dev.plone.org/plone/ticket/7177
  [emanlove]

1.0b2 - April 21, 2008
----------------------

- Resize images so they find in the content region (on modern browsers).
  [cornae]


1.0b1 - March 9, 2008
---------------------

- Lots of changes
  [lots of people]


0.5 - Feb 25, 2007
------------------

- Added metadata.xml file to the profile.
  [hannosch]

- Tagged the first version to coincide with the 
  Plone 3.0 beta release.
  [limi]

- Generated skeleton product from DIYPloneStyle 2.5.
  [generator]